cmake_minimum_required(VERSION 3.16)

project(75623151 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.2 COMPONENTS Quick ShaderTools REQUIRED)

qt_add_executable(app75623151
    main.cpp
)

qt_add_qml_module(app75623151
    URI 75623151
    VERSION 1.0
    QML_FILES main.qml 
)

qt_add_shaders(app75623151 "app75623151_shaders"
    PRECOMPILE
    OPTIMIZED
    PREFIX
        "/75623151"
    FILES
        "shaders/blend.frag"
)

set_target_properties(app75623151 PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(app75623151
    PRIVATE Qt6::Quick)

install(TARGETS app75623151
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
